--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "GVT",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/logo.png",
     "scheme": "gvt",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -14,28 +14,28 @@
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
+        "foregroundImage": "./assets/images/logo.png",
+        "backgroundImage": "./assets/images/logo.png",
+        "monochromeImage": "./assets/images/logo.png"
       },
+      "package": "com.ahmedabid.gvt",
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
     },
     "web": {
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "output": "static"
     },
     "plugins": [
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
+          "image": "./assets/images/splash-bg.png",
+          "imageWidth": 1000,
+          "resizeMode": "cover",
+          "backgroundColor": "#F5F1E8",
           "dark": {
-            "backgroundColor": "#000000"
+            "backgroundColor": "#F5F1E8"
           }
         }
       ]
@@ -43,6 +43,13 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "1f44014e-c9d1-4fb8-a8f1-50131f359647"
+      }
+    },
+    "owner": "ahmed0029292"
   }
 }
