--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "expo-asset": "^12.0.12",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.10",
-    "expo-gl": "^16.0.7",
+    "expo-gl": "16.0.7",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-linear-gradient": "^15.0.8",
